radiology/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radiology-hub
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radiology-hub
  ports:
    - port: 8081
      name: radiology-hub
      targetPort: 3000
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radiology-hub
  namespace: radiology
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radiology-hub
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radiology-hub
    spec:
      containers:
        - name: radiology-hub
          image: markuseisl00/radiology
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: next
              containerPort: 3000
          resources:
            requests:
              memory: '1Mi'
              cpu: '1m'
            limits:
              memory: '1Gi'
              cpu: '3000m'
