radiology/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radiology-hub
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    #traefik.ingress.kubernetes.io/router.middlewares: traefik-homepage-auth@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - radiologyhub.traunseenet.com
      secretName: letsencrypt-prod
  rules:
    - host: radiologyhub.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radiology-hub
                port:
                  name: radiology-hub
